# eve-means-of-profit

./: .env.default  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  TECHNICAL_SPECS.md  TESTING_GUIDE.md  conftest.py  eve-means-of-profit.spec  main.py  pyproject.toml
.github/workflows/: build-executable.yml  python-app.yml  release.yml  test-build.yml
src/: __init__.py  __main__.py  main.py
src/core/: __init__.py  blueprint_service.py  manufacturing_service.py  market_service.py  price_analyzer.py  type_service.py
src/data/: __init__.py  fuzzwork_provider.py  sde_provider.py
src/data/clients/: __init__.py  fuzzwork_client.py  sde_client.py
src/data/clients/esi/: __init__.py  auth.py  cache.py  callback_server.py  client.py  rate_limit.py  rate_limiter.py
src/data/clients/esi/endpoints/: __init__.py  assets.py  character.py  contracts.py  corporation.py  industry.py  location.py  market.py  skills.py  universe.py  wallet.py
src/data/loaders/: __init__.py  fuzzwork_csv.py  sde_jsonl.py
src/data/managers/: __init__.py  market.py  sde.py
src/data/parsers/: __init__.py  fuzzwork_csv.py  sde_jsonl.py
src/data/providers/: __init__.py  market.py  sde.py
src/data/repositories/: __init__.py  assets.py  character_lifecycle.py  contracts.py  custom_prices.py  industry_jobs.py  journal.py  market_orders.py  networth.py  prices.py  repository.py  schemas.py  transactions.py
src/models/: __init__.py
src/models/app/: __init__.py  asset_tree.py  character_info.py  enriched_asset.py  fuzz_market.py  location.py  snapshot.py  stockpile.py
src/models/eve/: __init__.py  asset.py  blueprint.py  category.py  character.py  contract.py  dogma.py  group.py  industry_job.py  journal.py  location.py  market_group.py  market_order.py  market_price.py  position.py  project.py  station.py  structure.py  text.py  transaction.py  type.py  type_material.py
src/models/ui/: __init__.py  table_models.py
src/services/: __init__.py  asset_service.py  character_service.py  contract_service.py  industry_service.py  location_service.py  market_service.py  networth_service.py  wallet_service.py
src/ui/: __init__.py  main_window.py  signal_bus.py  styles.py
src/ui/dialogs/: __init__.py  account_manager_dialog.py  auth_dialog.py  custom_location_dialog.py  custom_overrides_dialog.py  custom_price_dialog.py  edit_snapshot_dialog.py  preferences_dialog.py  select_asset_locations_dialog.py
src/ui/menus/: __init__.py  context_menu_factory.py
src/ui/tabs/: __init__.py  asset_tree_tab.py  assets_tab.py  characters_tab.py  industry_jobs_tab.py  industry_slots_tab.py  journal_tab.py  networth_tab.py  stockpiles_tab.py  transactions_tab.py
src/ui/utils/: clipboard.py
src/ui/widgets/: __init__.py  account_group_widget.py  advanced_table_widget.py  blueprint_viewer.py  character_filter_widget.py  character_item_widget.py  endpoint_timer.py  filter_panel.py  filter_widget.py  flow_layout.py  manufacturing_window.py  market_panel.py  progress_widget.py  search_bar.py  types_browser.py
src/utils/: __init__.py  case_converter.py  config.py  di_container.py  exceptions.py  formatting.py  jsonl_parser.py  logging_setup.py  metrics.py  progress_callback.py  settings_manager.py
tests/: __init__.py  conftest.py  test_asset_tree_duplication_and_pricing.py  test_assets_tab.py  test_async_refresh.py  test_blueprint_display.py  test_blueprint_pricing.py  test_character_filter_widget.py  test_context_menus.py  test_di_async_concurrency.py  test_di_container.py  test_formatting.py  test_fuzzwork_update_gating.py  test_implementation_tasks.py  test_industry_jobs_timer.py  test_location_filters.py  test_location_service_coalescing.py  test_logging_precedence.py  test_metrics.py  test_networth_aggregation.py  test_networth_fallback_snapshots.py  test_networth_history_filters.py  test_networth_price_selection.py  test_price_snapshot_lifecycle.py  test_price_snapshot_persistence.py  test_progress.py  test_sde_persistence.py  test_sde_provider.py  test_shared_esi_client.py  test_ui_fixes_comprehensive.py  test_ui_updates.py
tests/data/clients/esi/: __init__.py  test_auth.py  test_cache.py  test_client_integration.py  test_esi_models.py  test_jwt_decoding.py  test_rate_limiter.py
tests/test_utils/: test_jsonl_parser.py
tests/utils/: test_jsonl_parser.py
