[project]
name = "eve-means-of-profit"
version = "0.1.0"
description = "Profit"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.2",
    "pyqt6>=6.10.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

authors = [{ name = "Tyron Denker", email = "tyronevedenker@gmail.com" }]
